NetBSD Problem Report #41924

From jdc@coris.org.uk  Sun Aug 23 12:11:55 2009
Return-Path: <jdc@coris.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7506E63C2D3
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 23 Aug 2009 12:11:55 +0000 (UTC)
Message-Id: <20090823102156.7781C3F@biscuit.int.coris.org.uk>
Date: Sun, 23 Aug 2009 10:21:56 +0000 (UTC)
From: jdc@coris.org.uk
Reply-To: jdc@coris.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: nvi: string searching broken on LP64
X-Send-Pr-Version: 3.95

>Number:         41924
>Category:       bin
>Synopsis:       nvi: string searching broken on LP64
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 23 12:15:00 +0000 2009
>Closed-Date:    Sat Oct 31 20:13:25 +0000 2009
>Last-Modified:  Sun Nov 01 16:15:03 +0000 2009
>Originator:     Julian Coleman
>Release:        NetBSD 5.0_RC2
>Organization:
	None
>Environment:
System: NetBSD biscuit.int.coris.org.uk 5.0_RC2 NetBSD 5.0_RC2 (ULTRA-PCI) #3: Sun Mar 15 15:46:22 GMT 2009 root@sirion.coris.org.uk:/usr/obj/sparc64-netbsd-5/sparc64/usr/cvs/netbsd-5/src/sys/arch/sparc64/compile/ULTRA-PCI sparc64
Architecture: sparc64
Machine: sparc64
>Description:
	Searching for a long string is broken on LP64 architectures (at least
	sparc64 and amd64) in nvi.  Tested on sparc64/4.99.72, sparc64/5.0RC2
	and amd64/current.  The same tests succeed on i386.  (Thanks to ober@
>How-To-Repeat:
	Edit a new file with vi.
	Enter a line containing:
	  g_thread_functions_for_glib_use
	Search for the whole string.  See it display "Pattern not found".
	Note, that searching without the final 'e' will succeed.
	Note, also, that amd64 fails for the string:
	  abcdabcdabcdabcdabcdabcdabcdabcd
	(it advances the cursor one char each time 'n' is pressed)
>Fix:
	Unknown.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sat, 31 Oct 2009 20:13:25 +0000
State-Changed-Why:
Fixed, pullup will be requested for 5.1


From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41924 CVS commit: src/dist/nvi/regex
Date: Sat, 31 Oct 2009 20:11:54 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sat Oct 31 20:11:53 UTC 2009

 Modified Files:
 	src/dist/nvi/regex: regexec.c

 Log Message:
 Fix regexp on LP64 systems.
 By the time 'states1' was expanded, it became 'char *' so the code tried
 to put 64 bits into an int!
 Fixed PR/41924


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/dist/nvi/regex/regexec.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41924 CVS commit: [netbsd-5] src/dist/nvi/regex
Date: Sun, 1 Nov 2009 16:10:13 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Nov  1 16:10:12 UTC 2009

 Modified Files:
 	src/dist/nvi/regex [netbsd-5]: regexec.c

 Log Message:
 Pull up following revision(s) (requested by dsl in ticket #1121):
 	dist/nvi/regex/regexec.c: revision 1.4
 Fix regexp on LP64 systems.
 By the time 'states1' was expanded, it became 'char *' so the code tried
 to put 64 bits into an int!
 Fixed PR/41924


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.2.6.1 -r1.1.1.2.6.2 src/dist/nvi/regex/regexec.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.