Fix regexp on LP64 systems. By the time 'states1' was expanded, it became 'char *' so the code tried to put 64 bits into an int! Fixed PR/41924