dist/nvi/regex/regexec.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: regexec.c,v 1.3 2009/01/18 03:45:50 lukem Exp $ */
+/*	$NetBSD: regexec.c,v 1.4 2009/10/31 20:11:53 dsl Exp $ */
 
 /*-
  * Copyright (c) 1992, 1993, 1994 Henry Spencer.
@@ -67,7 +67,7 @@ static int nope = 0;		/* for use in asserts; shuts lint up */
 
 /* macros for manipulating states, small version */
 #define	states	int
-#define	states1	states		/* for later use in regexec() decision */
+#define	states1	int		/* for later use in regexec() decision */
 #define	CLEAR(v)	((v) = 0)
 #define	SET0(v, n)	((v) &= ~(1 << (n)))
 #define	SET1(v, n)	((v) |= 1 << (n))
